tests/ui/feature-gates/feature-gate-naked_functions.stderr
error[E0658]: the `#[naked]` attribute is an experimental feature
  --> $DIR/feature-gate-naked_functions.rs:5:1
   |
LL | #[naked]
   | ^^^^^^^^
   |
   = note: see issue #32408 <https://github.com/crablang/crablang/issues/32408> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable

error[E0658]: the `#[naked]` attribute is an experimental feature
  --> $DIR/feature-gate-naked_functions.rs:11:1
   |
LL | #[naked]
   | ^^^^^^^^
   |
   = note: see issue #32408 <https://github.com/crablang/crablang/issues/32408> for more information
   = help: add `#![feature(naked_functions)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `crablangc --explain E0658`.
